# Mohammad-Baker-MLOps

./: .dockerignore  .gitignore  Dockerfile  Makefile  build.bat  pyproject.toml  requirements.txt  run.sh
app/: housing_data.py  streamlit_app.py
