[tool.poetry]
name = "housing-statistics"
version = "0.1.0"
description = "A Streamlit app to display housing statistics and graphs."
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11.6"
streamlit = "^1.10.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
vulture = "^2.3"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"